--- a/Views/ReceivedCannabisOrder/Index.cshtml
+++ b/Views/ReceivedCannabisOrder/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <div class="text-center">
-    <h4 class="display-5">Received Cannabis Order</h4>
+    <h4 class="display-5">Received Cannabis Order Exceptions</h4>
 </div>
 <body>
     <div class="searchInput">
