--- a/wwwroot/css/searchHeader.css
+++ b/wwwroot/css/searchHeader.css
@@ -15,12 +15,17 @@
     width: 210px;
     display: inline-block;
 }
+.selectpicker {
+    width: 280px !important;
+    background: #FFF;
+    color: #000;
+}
 .input {
     border: 1px solid black;
     border-radius: 8px;
     border-width: 1px;
     text-align: left;
-    width: 110px;
+    width: 110px !important;
     height: 30px;
     font-size: 12px;
 }
@@ -148,7 +153,7 @@
     font-size: 12px;
 }
 .searchDropdown2 {
-    width: 280px;
+    width: 280px !important;
     display: inline-block;
 }
 
@@ -156,7 +161,7 @@
     display: inline-block;
     border-width: 1px;
     text-align: left;
-    width: 180px;
+    width: 180px !important;
     font-size: 12px;
 }
 .checkboxLabel {
