--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" asp-area="" asp-controller="Supplier" asp-action="Index">Supplier</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="ProductCannabis" asp-action="Index">Product Cannabis</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Customers" asp-action="Index">Customer</a>
                             </div>
                         </li>
