--- a/Views/CannabisCustSumm/Index.cshtml
+++ b/Views/CannabisCustSumm/Index.cshtml
@@ -29,11 +29,16 @@
            <input type="text" class="input" id="orderNumber" />
       </div>
       <div class="Gap2"></div>
-      <div class="searchDropdown2">
-           <label for="customer" class="Label">Customer:</label>
-           <select class="form-control dropDownInput2" id="customer" name="Customer"></select>
-      </div>
-      <div class="Gap2"></div>
+    <div class="searchInput220">
+        <label for="customer" class="Label">Customer:</label>
+        <select class="searchDropdown2 selectpicker" id="customer" data-live-search="true"></select>
+    </div>
+   <div class="Gap42"></div>
+    @*     <div class="searchInput">
+        <label class="Label" for="orderNumber">Order #:</label>
+        <input type="text" class="input" id="orderNumber" />
+    </div>
+    <div class="Gap41"></div>*@
       <div class="searchDropdown2">
            <label for="supplier" class="Label">Supplier:</label>
            <select class="form-control dropDownInput2" id="supplier" name="Supplier"></select>
@@ -186,27 +191,27 @@
                $("#StatusDropdown").html(s);  
            }  
        });
-       $(document).ready(function () {
-            $.ajax({
-                type: "GET",
-                    url: "CannabisCustSumm/CreateCustomerList",
-                data: "{}",
-                success: function (data) {
-                        var s = '<option value="-1"> </option>';
-                    for (var i = 0; i < data.length; i++) {
-                        s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';
+            $(document).ready(function () {
+                $.ajax({
+                    type: "GET",
+                    url: "CannabisOrderEntry/CreateCustomerList",
+                    data: "{}",
+                    success: function (data) {
+                        $("#customer").append('<option value="-1">Customers...</option>');
+                        for (var i = 0; i < data.length; i++) {
+                            $("#customer").append('<option value="' + data[i].value + '">' + data[i].text + '</option>');
+                        }
+                        $("#customer").selectpicker("refresh");
                     }
-                    $("#customer").html(s);
-                }
+                });
             });
-        });
         $(document).ready(function () {
             $.ajax({
                 type: "GET",
                     url: "CannabisCustSumm/CreateSupplierList",
                 data: "{}",
                 success: function (data) {
-                        var s = '<option value="-1"> </option>';;
+                        var s = '<option value="-1">Suppliers...</option>';;
                     for (var i = 0; i < data.length; i++) {
                         s += '<option value="' + data[i].value + '">' + data[i].text + '</option>';
                     }
